--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
-Benjo 
+<html>
+  <head><title>Testing</title></head>
+  <body>
+    Benjo 
 
-<iframe src="https://giphy.com/embed/XjvtReNjyGjFm" width="480" height="280" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/party-year-vitas-XjvtReNjyGjFm">via GIPHY</a></p>
+    <iframe src="https://giphy.com/embed/XjvtReNjyGjFm" width="480" height="280" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/party-year-vitas-XjvtReNjyGjFm">via GIPHY</a></p>
+  </body>
+</html>
